--- a/segunda/server/package.json
+++ b/segunda/server/package.json
@@ -31,6 +31,8 @@
     "lint": "standard 'src/**/*.js'"
   },
   "dependencies": {
+    "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "morgan": "^1.9.0"
   },
