--- a/segunda/server/.env
+++ b/segunda/server/.env
@@ -4,3 +4,9 @@ HOST=localhost
 PORT=9000
 TIMEZONE=Europe/Amsterdam
 TOKEN=1234567890
+DB_DEBUG=true
+DB_POOLSIZE=200
+DB_PROTOCOL=mongodb
+DB_URL=127.0.0.1
+DB_PORT=27017
+DB_NAME=recipes
